[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazeforge"
version = "1.0.0"
authors = [
    { name="Fireboy086", email="volodymyr.renskyi@icloud.com" }
]
description = "A flexible maze generation library with multiple algorithms and output formats"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow>=4.2.0",
]

[project.urls]
"Homepage" = "https://github.com/Fireboy086/MazeForge"
"Bug Tracker" = "https://github.com/Fireboy086/MazeForge/issues" 